syntax = "proto3";

package tempbackuppb;

service BackupTransferService {
  rpc TransferFullBackup(stream FullBackupContentStream) returns (BackupReply) {};
  rpc TransferIncBackup(stream IncBackupContentStream) returns (BackupReply) {};
  rpc PostCheckpoints(PostCheckpointsRequest) returns (PostCheckpointsResponse) {};
}

message FullBackupContentStream {
  string db = 1;
  bytes content = 2;
}

message IncBackupContentStream {
  string db = 1;
  string lsn = 2;
  bytes content = 3;
}

message BackupReply {
  string message = 1;
  string key = 2;
}

message PostCheckpointsRequest {
  string key = 1;
  bytes content = 2;
}

message PostCheckpointsResponse {
  string message = 1;
}
